--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "prettier-eslint": "^8.8.1"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.6",
